# edu-homework-grader

./: .env.example  .gitignore  .patch_grade_complexity_slice.py.gz.b64  .pr101-copy-patch-trigger  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  compose.yaml  docker-bake.ci.hcl  pr103-ruff-settings.txt  ruff.toml
apps/api/: Dockerfile  pyproject.toml
apps/api/alembic/: env.py  script.py.mako
apps/api/alembic/versions/: 0001_tenant_identity.py  0002_question_versions.py  0003_student_assignments.py  0004_english_grading_runs.py  0005_teacher_review_and_publication.py  0006_student_appeals_and_corrections.py  0007_privacy_audit_foundation.py  0008_guardian_consents.py  0009_privacy_requests.py  0010_answer_envelope_v1.py  0011_review_task_replacement_chain.py  0012_guardian_consent_state_integrity.py  0013_curriculum_profile_foundation.py  0014_curriculum_import_operations.py  0015_ai_generation_jobs.py  0016_ai_question_validation_runs.py  0017_question_prompt_fingerprints.py  0018_curriculum_grade_complexity_rules.py  0019_ai_generated_question_reviews.py  0020_question_version_reading_material.py  0021_protect_ai_review_evidence.py  0022_generation_quota_usages.py  0023_generation_batch_acceptances.py  0024_generation_governance_entries.py
apps/api/src/edu_grader_api/: answer_envelope.py  audit.py  auth.py  bootstrap.py  db.py  dependencies.py  e2e_app.py  e2e_support.py  guardian_consent_integrity.py  logging.py  main.py  (+4 more)
apps/api/tests/: test_ai_evaluation.py  test_ai_evaluation_gate.py  test_ai_evaluation_operational.py  test_ai_question_generation_api.py  test_ai_question_review.py  test_answer_envelope.py  test_appeal_models.py  test_appeals.py  test_assignment_models.py  test_assignments.py  test_audit.py  test_auth.py  test_bootstrap.py  test_budget_aware_verification.py  test_candidate_content_policy.py  test_capacity_aware_verification.py  test_ci_e2e_workflow.py  test_ci_workflow.py  test_class_access.py  test_curriculum_api.py  test_curriculum_imports.py  test_curriculum_models.py  test_e2e_app.py  test_e2e_support.py  test_english_grader_client.py  test_english_grading_runs.py  test_english_policies.py  test_epic_1_e2e.py  test_generation_governance_constraints.py  test_generation_governance_controls.py  test_generation_governance_deployment.py  test_generation_models.py  test_generation_service.py  test_grade_complexity.py  test_grade_publication.py  test_grader_timeout.py  test_guardian_consent_integrity.py  test_guardian_consent_integrity_cli.py  test_guardian_consent_models.py  test_guardian_consents.py  (+35 more)
services/generator/: pyproject.toml
services/generator/tests/: test_contracts.py
services/grader/: Dockerfile  pyproject.toml
services/grader/scripts/: prefetch_english_model.py
services/grader/tests/: test_calibration.py  test_container_build.py  test_deployment.py  test_english.py  test_english_dependencies.py  test_english_lifecycle.py  test_english_orchestrator.py  test_math.py  test_math_execution.py  test_math_golden.py  test_mathjson.py  test_prefetch_english_model.py
(+351 files in other folders)
