[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "edu-grader-api"
version = "0.1.0"
description = "Core API for the English and mathematics homework grading platform"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.16,<2",
  "fastapi==0.139.0",
  "pydantic-settings>=2.10,<3",
  "psycopg[binary]>=3.2,<4",
  "pyjwt[crypto]>=2.10,<3",
  "python-multipart>=0.0.20,<1",
  "sqlalchemy>=2.0,<2.1",
  "uvicorn[standard]>=0.35,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1",
  "pytest>=8.4,<10",
  "ruff>=0.12,<1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
