[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "edu-grader-api"
version = "0.1.0"
description = "Core API for the English and mathematics homework grading platform"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.16,<2",
  "fastapi==0.139.0",
  "httpx>=0.28,<1",
  "jsonschema>=4.26,<5",
  "pydantic-settings>=2.10,<3",
  "psycopg[binary]>=3.2,<4",
  "pyjwt[crypto]>=2.10,<3",
  "python-multipart>=0.0.20,<1",
  "sqlalchemy>=2.0,<2.1",
  "uvicorn[standard]>=0.35,<1",
]

[project.optional-dependencies]
dev = [
  "pre-commit>=4.4,<5",
  "pytest>=8.4,<10",
  "ruff==0.15.14",
]

[tool.setuptools.packages.find]
where = ["src"]
