[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "edu-grader-generator"
version = "0.1.0"
description = "Provider-neutral structured candidate-question generation"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.10,<3",
  "edu-grader-processor-policy",
]

[project.optional-dependencies]
openai = ["openai>=1.66,<3"]
dev = [
  "pytest>=8.4,<10",
  "ruff==0.16.0",
]

[tool.setuptools.packages.find]
where = ["src"]
