[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "edu-grader"
version = "0.1.0"
description = "Deterministic grading service for English and mathematics homework"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.139.0",
  "sentence-transformers==5.6.0",
  "sympy==1.14.0",
  "uvicorn[standard]>=0.35,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1",
  "pytest>=8.4,<10",
  "ruff==0.16.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
